--- a/index.css
+++ b/index.css
@@ -86,5 +86,18 @@ body {
 	margin-bottom: 10px;
 	text-decoration: underline;
   }
+  
+  .file-secondMain {
+    color: #f2f2f2;
+    text-decoration: none;
+	font-weight: bold;
+    margin: 10px;
+    font-size: 1.6em;
+    transition: color 0.2s ease-in-out;
+	display: flex;
+    flex-direction: column;
+	margin-bottom: 10px;
+	text-decoration: underline;
+  }
 
   
