--- a/Programovani/programovani.css
+++ b/Programovani/programovani.css
@@ -57,6 +57,10 @@ body {
     flex-direction: column;
   }
   
+  .file-chatGpt:hover {
+	color: #282828;  
+  }
+  
  
   .file-link:hover {
     color: #282828;
