--- a/index.css
+++ b/index.css
@@ -45,7 +45,16 @@ body {
     color: #282828;
   }
   
-  .file-literatura {
+  
+  
+  
+  
+  
+  
+  /* ######################### */
+  /* Infis Maturita Literatura */
+  /* ######################### */
+  .file-literatura-link {
     color: #f2f2f2;
     text-decoration: none;
 	font-weight: bold;
@@ -57,8 +66,129 @@ body {
 	margin-bottom: 10px;
   }
   
-  .file-literatura:hover {
+  .file-literatura-link:hover {
     color: #282828;
+  }
+  
+  .file-literatura-text-main {
+    color: #f2f2f2;
+    text-decoration: none;
+	font-weight: bold;
+    margin: 10px;
+    font-size: 1.7em;
+    transition: color 0.2s ease-in-out;
+	display: flex;
+    flex-direction: column;
+	margin-bottom: 10px;
+	text-decoration: underline;
+  }
+  
+  .file-literatura-text-main-second {
+    color: #f2f2f2;
+    text-decoration: none;
+	font-weight: bold;
+    margin: 10px;
+    font-size: 1.7em;
+    transition: color 0.2s ease-in-out;
+	display: flex;
+    flex-direction: column;
+	margin-top: 50px;
+	margin-bottom: 5px;
+	text-decoration: underline;
+  }
+  
+  .file-literatura-text-main-filetype {
+    color: #f2f2f2;
+    text-decoration: none;
+	font-weight: bold;
+    margin: 10px;
+    font-size: 1.5em;
+    transition: color 0.2s ease-in-out;
+	display: flex;
+    flex-direction: column;
+	margin-bottom: 10px;
+
+  }
+  
+  .file-literatura-text-second-filetype {
+    color: #f2f2f2;
+    text-decoration: none;
+	font-weight: bold;
+    margin: 10px;
+    font-size: 1.5em;
+    transition: color 0.2s ease-in-out;
+	display: flex;
+    flex-direction: column;
+	margin-bottom: 10px;
+	margin-top: 50px;
+
+  }
+  
+
+  
+  
+  
+  
+  
+  /* ################## */
+  /* Infis Programovani */
+  /* ################## */
+  .file-programovani-link {
+    color: #f2f2f2;
+    text-decoration: none;
+	font-weight: bold;
+    margin: 10px;
+    font-size: 1.2em;
+    transition: color 0.2s ease-in-out;
+	display: flex;
+    flex-direction: column;
+	margin-bottom: 10px;
+  }
+  
+  .file-programovani-link:hover {
+    color: #282828;
+  }
+  
+  .file-programovani-text-main {
+    color: #f2f2f2;
+    text-decoration: none;
+	font-weight: bold;
+    margin: 10px;
+    font-size: 1.4em;
+    transition: color 0.2s ease-in-out;
+	display: flex;
+    flex-direction: column;
+	margin-bottom: 5px;
+	text-decoration: underline;
+  }
+  
+  .file-programovani-text-main-second {
+    color: #f2f2f2;
+    text-decoration: none;
+	font-weight: bold;
+    margin: 10px;
+    font-size: 1.4em;
+    transition: color 0.2s ease-in-out;
+	display: flex;
+    flex-direction: column;
+	margin-bottom: 20px;
+	text-decoration: underline;
+  }
+  
+  .programovani-header-chatGpt {
+    color: #f2f2f2;
+    text-decoration: underline;
+	font-weight: bold;
+    font-size: 1.5em;
+    transition: color 0.2s ease-in-out;
+	display: flex;
+    flex-direction: column;
+  }
+  
+  .programovani-header-text {
+    font-size: 1.3em;
+    margin-top: 10px;
+    color: #f2f2f2;
   }
   
   .file-second {
@@ -73,19 +203,6 @@ body {
 	margin-bottom: 10px;
 	margin-top: 50px;
 
-  }
-  
-  .file-main {
-    color: #f2f2f2;
-    text-decoration: none;
-	font-weight: bold;
-    margin: 10px;
-    font-size: 1.7em;
-    transition: color 0.2s ease-in-out;
-	display: flex;
-    flex-direction: column;
-	margin-bottom: 10px;
-	text-decoration: underline;
   }
   
   .file-mainSecond {
