--- a/index.css
+++ b/index.css
@@ -95,6 +95,7 @@ body {
 	margin-top: 50px;
 	margin-bottom: 5px;
 	text-decoration: underline;
+	
   }
   
   .file-literatura-text-main-filetype {
@@ -107,8 +108,14 @@ body {
 	display: flex;
     flex-direction: column;
 	margin-bottom: 10px;
+	cursor: pointer;
+	
 
   }
+  
+  .file-literatura-text-main-filetype:hover {
+    color: #282828;
+  } 
   
   .file-literatura-text-second-filetype {
     color: #f2f2f2;
@@ -120,8 +127,13 @@ body {
 	display: flex;
     flex-direction: column;
 	margin-bottom: 10px;
-	margin-top: 50px;
+	margin-top: 20px;
+	cursor: pointer;
 
+  }
+  
+  .file-literatura-text-second-filetype:hover {
+    color: #282828;
   }
   
 
