--- a/index.css
+++ b/index.css
@@ -203,6 +203,27 @@ body {
     color: #f2f2f2;
   }
   
+  /* ################## */
+  /* ### Infis Sítě ###*/
+  /* ################## */
+  
+  .file-site-link {
+    color: #f2f2f2;
+    text-decoration: none;
+	font-weight: bold;
+    margin: 10px;
+    font-size: 1.2em;
+    transition: color 0.2s ease-in-out;
+	display: flex;
+    flex-direction: column;
+	margin-bottom: 10px;
+  }
+  
+  .file-site-link:hover {
+    color: #282828;
+  }
+  
+  
   .file-second {
     color: #f2f2f2;
     text-decoration: none;
